--- a/order-service.properties
+++ b/order-service.properties
@@ -13,3 +13,4 @@ info.app.version=1.0.0
 
 server.port=8082
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.boot.admin.client.url=http://localhost:8080
