--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,6 +1,8 @@
 server.port=8762
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.boot.admin.client.url=http://localhost:8080
+
 zuul.ignored-services=*
 zuul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=auth-service
