--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -2,6 +2,7 @@ server.port=8762
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
 
 zuul.ignored-services=*
 zuul.routes.auth-service.path=/auth/**
