--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,5 +1,6 @@
 server.port=8081
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.boot.admin.client.url=http://localhost:8080
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
