--- a/auth-service.properties
+++ b/auth-service.properties
@@ -11,4 +11,6 @@ info.app.description=This is auth service on spring boot application
 info.app.version=1.0.0
 
 server.port=8081
+spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
 # eureka.client.service-url.default-zone=http://localhost:8761/eureka
