--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,4 +1,7 @@
 server.port=8762
+spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
+
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.boot.admin.client.url=http://localhost:8080
