--- a/promotion-service.properties
+++ b/promotion-service.properties
@@ -5,7 +5,7 @@ server.port=8083
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.boot.admin.client.url=http://localhost:8080
 management.endpoints.web.exposure.include=*
-spring.zipkin.baseUrl=http://localhost:9411
+spring.zipkin.baseUrl=http://192.168.99.100:9411
 spring.sleuth.sampler.probability=1.0
 
 spring.datasource.url=jdbc:mysql://192.168.99.100:3306/my_db
