--- a/promotion-service-t1.properties
+++ b/promotion-service-t1.properties
@@ -1,4 +1,17 @@
+info.app.name=Promotion Service Application
+info.app.description=Promotion Service on spring boot application
+info.app.version=1.0.0
 server.port=8084
-spring.application.name=promotion-service
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.boot.admin.client.url=http://localhost:8080
+management.endpoints.web.exposure.include=*
+spring.zipkin.baseUrl=http://192.168.99.100:9411
+spring.sleuth.sampler.probability=1.0
+
+spring.datasource.url=jdbc:mysql://192.168.99.100:3306/my_db
+spring.datasource.username=my_db
+spring.datasource.password=my_db
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
